--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,16 +38,16 @@
             android:id="@+id/et_palindromo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/tv_titulo"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="51dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Informe aqui a palavra"
+            android:text=""
             android:textColor="#ddd"
+            android:hint=""
             tools:ignore="HardcodedText,LabelFor"
-            tools:textColorHint="#888" />
+            tools:textColorHint="#888"
+            android:layout_below="@+id/tv_titulo"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/tv_resposta"
